--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,13 +14,13 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            python3 -m venv venv
+            sudo python3 -m venv venv
             . venv/bin/activate
-            pip install -r requirements.txt
+            sudo pip install -r requirements.txt
       # Step 3: run linter and tests
       - run:
           name: run tests
           command: |
             . venv/bin/activate
-            flake8 --exclude=venv* --statistics
-            pytest -v --cov=calculator
+            sudo flake8 --exclude=venv* --statistics
+            sudo pytest -v --cov=calculator
