--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           command: |
             sudo python3 -m venv venv
             . venv/bin/activate
-            #sudo pip install -r requirements.txt
+            sudo pip install -r requirements.txt
       # Step 3: run linter and tests
       - run:
           name: run tests
